MapMarkerPanel fixed width issue on mobile

--- a/app/styles/_mapMarkerPanel.scss
+++ b/app/styles/_mapMarkerPanel.scss
@@ -5,6 +5,7 @@
 	left: 0 !important;
 	background-color: #fff;
 	border: none;
+	box-shadow: 0px 0px 10px 1px #bdc3c7;
 }
 
 .gm-style img{
@@ -15,6 +16,10 @@
 	width: 500px;
 	height: auto;
 	background-color: #fff;
+
+	@media(max-width:$screen-sm){
+		width:100%;
+	}
 }
 
 .marker-panel-header{
@@ -63,7 +68,7 @@
 	width: 100%;
 }
 
-.angular-google-map-container{
+/*.angular-google-map-container{
 	width:100%;
 	height:324px;
 
@@ -71,4 +76,4 @@
 		height:100vh;
 		width:100%;
 	}
-}
+}*/
